// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageArguments /> renders correcty 1`] = `
<DesktopDebateStepPageArguments
  step={
    Object {
      "$refType": null,
      "debate": Object {
        "$fragmentRefs": null,
        "arguments": Object {
          "totalCount": 7,
        },
        "id": "debat-cannabis",
      },
      "noDebate": Object {
        "$fragmentRefs": null,
        "id": "debat-cannabis",
      },
      "yesDebate": Object {
        "$fragmentRefs": null,
        "id": "debat-cannabis",
      },
    }
  }
/>
`;

exports[`<DebateStepPageArguments /> renders correcty on mobile 1`] = `
<Fragment>
  <MobileDebateStepPageArguments
    debate={
      Object {
        "$fragmentRefs": null,
        "arguments": Object {
          "totalCount": 7,
        },
        "id": "debat-cannabis",
      }
    }
  />
</Fragment>
`;
